@@ -1,3 +1,8 @@
+2014-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-sum.el (gnus-summary-toggle-header): Display header attachment
+	buttons when toggling the header off.
+
 2014-03-07  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* nnimap.el (nnimap-request-accept-article): Make respooling to nnimap
